# Clang Cross-Compilation Toolchains
#
# Clang is a native cross-compiler - it can target any architecture
# without needing separate toolchain installations.
#
# Requirements:
#   - clang/clang++ installed
#   - Target sysroot (for headers and libraries)
#
# Usage:
#   bazel build --config=arm //:minisatip
#   bazel build --config=arm64 //:minisatip

load("@rules_cc//cc:defs.bzl", "cc_toolchain", "cc_toolchain_suite")
load(":cc_toolchain_config.bzl", "cc_toolchain_config")

package(default_visibility = ["//visibility:public"])

# Toolchain suite containing all cross-compilation toolchains
cc_toolchain_suite(
    name = "clang_suite",
    toolchains = {
        "k8": ":clang_x86_64_toolchain",
        "x86_64": ":clang_x86_64_toolchain",
        "arm": ":clang_arm_toolchain",
        "aarch64": ":clang_arm64_toolchain",
        "mipsel": ":clang_mipsel_toolchain",
    },
)

filegroup(name = "empty")

#############################################################################
# x86_64 Toolchain (native)
#############################################################################

cc_toolchain(
    name = "clang_x86_64_toolchain",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = True,
    toolchain_config = ":clang_x86_64_config",
    toolchain_identifier = "clang-x86_64-linux",
)

cc_toolchain_config(
    name = "clang_x86_64_config",
    target_cpu = "x86_64",
    target_triple = "x86_64-unknown-linux-gnu",
    toolchain_identifier = "clang-x86_64-linux",
)

toolchain(
    name = "clang_x86_64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":clang_x86_64_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

#############################################################################
# ARM 32-bit Toolchain (armv7, Raspberry Pi, etc.)
#############################################################################

cc_toolchain(
    name = "clang_arm_toolchain",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = True,
    toolchain_config = ":clang_arm_config",
    toolchain_identifier = "clang-arm-linux",
)

cc_toolchain_config(
    name = "clang_arm_config",
    target_cpu = "arm",
    target_triple = "arm-unknown-linux-gnueabihf",
    toolchain_identifier = "clang-arm-linux",
)

toolchain(
    name = "clang_arm",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:arm",
    ],
    toolchain = ":clang_arm_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

#############################################################################
# ARM 64-bit Toolchain (aarch64)
#############################################################################

cc_toolchain(
    name = "clang_arm64_toolchain",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = True,
    toolchain_config = ":clang_arm64_config",
    toolchain_identifier = "clang-aarch64-linux",
)

cc_toolchain_config(
    name = "clang_arm64_config",
    target_cpu = "aarch64",
    target_triple = "aarch64-unknown-linux-gnu",
    toolchain_identifier = "clang-aarch64-linux",
)

toolchain(
    name = "clang_arm64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":clang_arm64_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

#############################################################################
# MIPSEL Toolchain (little-endian MIPS32 R1)
#############################################################################

cc_toolchain(
    name = "clang_mipsel_toolchain",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = True,
    toolchain_config = ":clang_mipsel_config",
    toolchain_identifier = "clang-mipsel-linux",
)

cc_toolchain_config(
    name = "clang_mipsel_config",
    extra_compile_flags = ["-march=mips32"],
    extra_link_flags = ["-march=mips32"],
    target_cpu = "mipsel",
    target_triple = "mipsel-unknown-linux-gnu",
    toolchain_identifier = "clang-mipsel-linux",
)

toolchain(
    name = "clang_mipsel",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "//platforms:mipsel",
    ],
    toolchain = ":clang_mipsel_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
