# Clang Cross-Compilation Toolchains
#
# Uses prebuilt LLVM binaries from official releases - no system packages required.
# Clang is a native cross-compiler - it can target any architecture.
# Supports both x86_64 and aarch64 host machines.
#
# Requirements:
#   - Target sysroot (for headers and libraries) when cross-compiling
#
# Usage:
#   bazel build --config=clang-arm //:minisatip
#   bazel build --config=clang-arm64 //:minisatip
#   bazel build --config=clang-mipsel //:minisatip

load("@rules_cc//cc:defs.bzl", "cc_toolchain", "cc_toolchain_suite")
load(":cc_toolchain_config.bzl", "cc_toolchain_config")

package(default_visibility = ["//visibility:public"])

# Toolchain suite containing all cross-compilation toolchains
cc_toolchain_suite(
    name = "clang_suite",
    toolchains = {
        "k8": ":clang_x86_64_toolchain",
        "x86_64": ":clang_x86_64_toolchain",
        "arm": ":clang_arm_toolchain",
        "aarch64": ":clang_arm64_toolchain",
        "mipsel": ":clang_mipsel_toolchain",
    },
)

# Host CPU detection for selecting the right LLVM toolchain
config_setting(
    name = "host_x86_64",
    constraint_values = ["@platforms//cpu:x86_64"],
)

config_setting(
    name = "host_aarch64",
    constraint_values = ["@platforms//cpu:aarch64"],
)

# LLVM toolchain file references - select based on host CPU
filegroup(
    name = "llvm_all_files",
    srcs = select({
        ":host_aarch64": ["@llvm_toolchain_aarch64//:all_files"],
        "//conditions:default": ["@llvm_toolchain_x86_64//:all_files"],
    }),
)

filegroup(
    name = "llvm_compiler_files",
    srcs = select({
        ":host_aarch64": ["@llvm_toolchain_aarch64//:compiler_files"],
        "//conditions:default": ["@llvm_toolchain_x86_64//:compiler_files"],
    }),
)

filegroup(
    name = "llvm_linker_files",
    srcs = select({
        ":host_aarch64": ["@llvm_toolchain_aarch64//:linker_files"],
        "//conditions:default": ["@llvm_toolchain_x86_64//:linker_files"],
    }),
)

filegroup(name = "empty")

#############################################################################
# x86_64 Toolchain (native with Clang)
#############################################################################

cc_toolchain(
    name = "clang_x86_64_toolchain",
    all_files = ":llvm_all_files",
    compiler_files = ":llvm_compiler_files",
    dwp_files = ":empty",
    linker_files = ":llvm_linker_files",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = True,
    toolchain_config = select({
        ":host_aarch64": ":clang_x86_64_config_aarch64_host",
        "//conditions:default": ":clang_x86_64_config_x86_64_host",
    }),
    toolchain_identifier = "clang-x86_64-linux",
)

cc_toolchain_config(
    name = "clang_x86_64_config_x86_64_host",
    llvm_prefix = "external/llvm_toolchain_x86_64",
    target_cpu = "x86_64",
    target_triple = "x86_64-unknown-linux-gnu",
    toolchain_identifier = "clang-x86_64-linux",
)

cc_toolchain_config(
    name = "clang_x86_64_config_aarch64_host",
    llvm_prefix = "external/llvm_toolchain_aarch64",
    target_cpu = "x86_64",
    target_triple = "x86_64-unknown-linux-gnu",
    toolchain_identifier = "clang-x86_64-linux",
)

toolchain(
    name = "clang_x86_64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":clang_x86_64_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

#############################################################################
# ARM 32-bit Toolchain (armv7, Raspberry Pi, etc.)
#############################################################################

cc_toolchain(
    name = "clang_arm_toolchain",
    all_files = ":llvm_all_files",
    compiler_files = ":llvm_compiler_files",
    dwp_files = ":empty",
    linker_files = ":llvm_linker_files",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = True,
    toolchain_config = select({
        ":host_aarch64": ":clang_arm_config_aarch64_host",
        "//conditions:default": ":clang_arm_config_x86_64_host",
    }),
    toolchain_identifier = "clang-arm-linux",
)

cc_toolchain_config(
    name = "clang_arm_config_x86_64_host",
    llvm_prefix = "external/llvm_toolchain_x86_64",
    target_cpu = "arm",
    target_triple = "arm-unknown-linux-gnueabihf",
    toolchain_identifier = "clang-arm-linux",
)

cc_toolchain_config(
    name = "clang_arm_config_aarch64_host",
    llvm_prefix = "external/llvm_toolchain_aarch64",
    target_cpu = "arm",
    target_triple = "arm-unknown-linux-gnueabihf",
    toolchain_identifier = "clang-arm-linux",
)

toolchain(
    name = "clang_arm",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:arm",
    ],
    toolchain = ":clang_arm_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

# Additional ARM toolchain for aarch64 hosts
toolchain(
    name = "clang_arm_aarch64_host",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:arm",
    ],
    toolchain = ":clang_arm_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

#############################################################################
# ARM 64-bit Toolchain (aarch64)
#############################################################################

cc_toolchain(
    name = "clang_arm64_toolchain",
    all_files = ":llvm_all_files",
    compiler_files = ":llvm_compiler_files",
    dwp_files = ":empty",
    linker_files = ":llvm_linker_files",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = True,
    toolchain_config = select({
        ":host_aarch64": ":clang_arm64_config_aarch64_host",
        "//conditions:default": ":clang_arm64_config_x86_64_host",
    }),
    toolchain_identifier = "clang-aarch64-linux",
)

cc_toolchain_config(
    name = "clang_arm64_config_x86_64_host",
    llvm_prefix = "external/llvm_toolchain_x86_64",
    target_cpu = "aarch64",
    target_triple = "aarch64-unknown-linux-gnu",
    toolchain_identifier = "clang-aarch64-linux",
)

cc_toolchain_config(
    name = "clang_arm64_config_aarch64_host",
    llvm_prefix = "external/llvm_toolchain_aarch64",
    target_cpu = "aarch64",
    target_triple = "aarch64-unknown-linux-gnu",
    toolchain_identifier = "clang-aarch64-linux",
)

toolchain(
    name = "clang_arm64",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":clang_arm64_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

# Additional ARM64 toolchain for aarch64 hosts
toolchain(
    name = "clang_arm64_aarch64_host",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    toolchain = ":clang_arm64_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

#############################################################################
# MIPSEL Toolchain (little-endian MIPS32 R1)
#############################################################################

cc_toolchain(
    name = "clang_mipsel_toolchain",
    all_files = ":llvm_all_files",
    compiler_files = ":llvm_compiler_files",
    dwp_files = ":empty",
    linker_files = ":llvm_linker_files",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = True,
    toolchain_config = select({
        ":host_aarch64": ":clang_mipsel_config_aarch64_host",
        "//conditions:default": ":clang_mipsel_config_x86_64_host",
    }),
    toolchain_identifier = "clang-mipsel-linux",
)

cc_toolchain_config(
    name = "clang_mipsel_config_x86_64_host",
    extra_compile_flags = ["-march=mips32"],
    extra_link_flags = ["-march=mips32"],
    llvm_prefix = "external/llvm_toolchain_x86_64",
    target_cpu = "mipsel",
    target_triple = "mipsel-unknown-linux-gnu",
    toolchain_identifier = "clang-mipsel-linux",
)

cc_toolchain_config(
    name = "clang_mipsel_config_aarch64_host",
    extra_compile_flags = ["-march=mips32"],
    extra_link_flags = ["-march=mips32"],
    llvm_prefix = "external/llvm_toolchain_aarch64",
    target_cpu = "mipsel",
    target_triple = "mipsel-unknown-linux-gnu",
    toolchain_identifier = "clang-mipsel-linux",
)

toolchain(
    name = "clang_mipsel",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "//platforms:mipsel",
    ],
    toolchain = ":clang_mipsel_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

# Additional MIPSEL toolchain for aarch64 hosts
toolchain(
    name = "clang_mipsel_aarch64_host",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "//platforms:mipsel",
    ],
    toolchain = ":clang_mipsel_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
